# Survival-of-the-Notable-in-Wikipedia

./: .gitignore  LICENSE  Makefile  README.md  Survival Analysis-Copy1.ipynb  Survival Analysis.ipynb  pyproject.toml  requirements.in
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Survival Analysis-Copy1.ipynb
survival_of_notability/: AfD_Parse.py  Compete.R  Survival Analysis.R  __init__.py  config.py  dataset.py  extract_wikidata.py  features.py  get_creation_dates.py  get_needed_creation_dates.py  get_needed_wikidata.py  plots.py  prepare_wikidata.py
survival_of_notability/modeling/: predict.py  train.py
